--- a/2022M06/【19200132 郭俊杰】数据库 2022M06 作业/【19200132 郭俊杰】数据库 2022M06 作业.md
+++ b/2022M06/【19200132 郭俊杰】数据库 2022M06 作业/【19200132 郭俊杰】数据库 2022M06 作业.md
@@ -11,8 +11,7 @@
 # 二、实验内容及其完成情况
 ## 1、实验准备
 语言选择：Java语言（需要下载JDBC驱动）
-驱动下载：!()[Pasted image 20221031132906.png]
-
+驱动下载：![[Pasted image 20221031154927.png]]
 ## 2、准备数据
 数据生成方式：Java自动随机生成
 其中分别生成100万条student记录，1万条course记录和1000万条sc记录。
@@ -223,11 +222,11 @@
 ```
 ### 最终生成数据结果如下图:
 #### (1)student.sql
-![](Pasted image 20221031135213.png)
+![[Pasted image 20221031154620.png]]
 #### (2)course.sql
-![](Pasted image 20221031135252.png)
+![[Pasted image 20221031154645.png]]
 #### (3)sc.sql
-![](Pasted image 20221031135321.png)
+![[Pasted image 20221031154709.png]]
 
 ## 3、插入数据
 ### (1)使用SQL Shell在数据库postgres分别创建表Student、Course和SC。
@@ -316,10 +315,10 @@ SQLException {  
 ```
 #### ②插入耗时：
 Student插入耗时（一百万条记录）：117s
-![](Pasted image 20221031140025.png)
+![[Pasted image 20221031154822.png]]
 
 Course插入耗时（一万条记录）：1.4s
-![](Pasted image 20221031140052.png)
+![[Pasted image 20221031154854.png]]
 
 Sc插入耗时（一千万条记录）：1484s
 
