--- a/2022M06/【19200132 郭俊杰】数据库 2022M06 作业/【19200132 郭俊杰】数据库 2022M06 作业.md
+++ b/2022M06/【19200132 郭俊杰】数据库 2022M06 作业/【19200132 郭俊杰】数据库 2022M06 作业.md
@@ -11,7 +11,9 @@
 # 二、实验内容及其完成情况
 ## 1、实验准备
 语言选择：Java语言（需要下载JDBC驱动）
-驱动下载：![[Pasted image 20221031154927.png]]
+驱动下载：
+![](./picture/Pasted%20image%2020221031132900.png)
+
 ## 2、准备数据
 数据生成方式：Java自动随机生成
 其中分别生成100万条student记录，1万条course记录和1000万条sc记录。
@@ -222,30 +224,28 @@
 ```
 ### 最终生成数据结果如下图:
 #### (1)student.sql
-![[Pasted image 20221031154620.png]]
+![](./picture/Pasted%20image%2020221031154620.png)
 #### (2)course.sql
-![[Pasted image 20221031154645.png]]
+![](./picture/Pasted%20image%2020221031154645.png)
 #### (3)sc.sql
-![[Pasted image 20221031154709.png]]
-
+![](./picture/Pasted%20image%2020221031154709.png)
 ## 3、插入数据
 ### (1)使用SQL Shell在数据库postgres分别创建表Student、Course和SC。
 
 #### ①创建Student表
-
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps1.jpg) 
+![](./picture/Pasted%20image%2020221031191559.png)
 
 #### ②创建Course表
 
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps2.jpg) 
+![](./picture/Pasted%20image%2020221031191714.png)
 
 #### ③创建SC表
 
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps3.jpg) 
+ ![](./picture/Pasted%20image%2020221031191815.png)
 
 #### ④查看创建结果
 
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps4.jpg)
+![](./picture/Pasted%20image%2020221031191828.png)
 
 ### (2)使用Java工具进行插入操作
 #### ①插入代码如下：
@@ -315,46 +315,44 @@ SQLException {  
 ```
 #### ②插入耗时：
 Student插入耗时（一百万条记录）：117s
-![[Pasted image 20221031154822.png]]
+![](./picture/Pasted%20image%2020221031154822.png)
 
 Course插入耗时（一万条记录）：1.4s
-![[Pasted image 20221031154854.png]]
-
+![](./picture/Pasted%20image%2020221031154854.png)
 Sc插入耗时（一千万条记录）：1484s
-
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps5.jpg)
+![](./picture/Pasted%20image%2020221031154749.png)
 
 ### (3)检查插入结果，通过pgadmin4检查插入结果
 #### ①使用sql指令SELECT * FROM student查询student表中数据
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps6.jpg) 
+![](./picture/Pasted%20image%2020221031191923.png) 
 
 #### ②使用sql指令SELECT * FROM courset查询course表中数据
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps7.jpg) 
+![](./picture/Pasted%20image%2020221031191947.png) 
 
 #### ③使用sql指令SELECT * FROM sc查询sc表中数据
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps8.jpg) 
+![](./picture/Pasted%20image%2020221031192013.png)
 
 #### ④三个表中记录条数查询：使用sql指令SELECT COUNT(*) FROM 各表查询三个表格表中记录个数
 
 student表：
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps9.jpg) 
+![](./picture/Pasted%20image%2020221031192029.png)
 
 course表：
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps10.jpg) 
+![](./picture/Pasted%20image%2020221031192100.png) 
 
 sc表：
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps11.jpg)
+![](./picture/Pasted%20image%2020221031192114.png)
 
 #### 三张表运行速度图表：
 
 ①student
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps12.jpg) 
+![](./picture/Pasted%20image%2020221031192126.png)
 
 ② course
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps13.jpg) 
+![](./picture/Pasted%20image%2020221031192144.png)
 
 ③sc
-![](file:///C:\Users\GJJ\AppData\Local\Temp\ksohtml17648\wps14.jpg)
+![](./picture/Pasted%20image%2020221031192157.png)
 
 
 # 三、实验总结
